Fix color translation in Messages and dependencies

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: StelyClaim
 author: Flowsqy
 version: ${project.version}
 main: fr.flowsqy.stelyclaim.StelyClaimPlugin
-depends:
+depend:
   - WorldEdit
   - WorldGuard
 api-version: 1.13
