Add add owner and member sub command

--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -35,3 +35,11 @@ claim:
   worldnothandle: "%prefix% &cLe monde &8%world% &cne gère pas les régions"
   notexist: "%prefix% &cTu n'as pas de claim"
   notexistother: "%prefix% &8%region% &cne possède pas de claim"
+  addmember: "%prefix% &6Tu viens d'ajouter &a%target% &6à ton claim"
+  addmemberother: "%prefix% &6Tu viens d'ajouter &a%target% &6au claim de &a%region%"
+  alreadymember: "%prefix% &8%target% &cfait déjà parti de ton claim"
+  alreadymemberother: "%prefix% &8%target% &cfait déjà parti du claim de &8%region%"
+  addowner: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires ton claim"
+  addownerother: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires du claim de &a%region%"
+  alreadyowner: "%prefix% &8%target% &cfait déjà parti des propriétaires de ton claim"
+  alreadyownerother: "%prefix% &8%target% &cfait déjà parti des propriétaires du claim de &8%region%"
