--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -39,7 +39,15 @@ claim:
   addmemberother: "%prefix% &6Tu viens d'ajouter &a%target% &6au claim de &a%region%"
   alreadymember: "%prefix% &8%target% &cfait déjà parti de ton claim"
   alreadymemberother: "%prefix% &8%target% &cfait déjà parti du claim de &8%region%"
-  addowner: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires ton claim"
+  addowner: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires de ton claim"
   addownerother: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires du claim de &a%region%"
   alreadyowner: "%prefix% &8%target% &cfait déjà parti des propriétaires de ton claim"
   alreadyownerother: "%prefix% &8%target% &cfait déjà parti des propriétaires du claim de &8%region%"
+  removemember: "%prefix% &6Tu viens de retirer &a%target% &6de ton claim"
+  removememberother: "%prefix% &6Tu viens de retirer &a%target% &6du claim de &a%region%"
+  notmember: "%prefix% &8%target% &cne fait pas parti de ton claim"
+  notmemberother: "%prefix% &8%target% &cne fait pas parti du claim de &8%region%"
+  removeowner: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires de ton claim"
+  removeownerother: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires du claim de &a%region%"
+  notowner: "%prefix% &8%target% &cne fait pas parti des propriétaires de ton claim"
+  notownerother: "%prefix% &8%target% &cne fait pas parti des propriétaires du claim de &8%region%"
