--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -75,6 +75,13 @@ claim:
   addowner-target: "%prefix% &a%sender% &6viens d'ajouter &a%target% &6aux propriétaires de ton claim"
   removeowner-target: "%prefix% &a%sender% &6viens de retirer &a%target% &6des propriétaires de ton claim"
   remove-target: "%prefix% &a%sender% &6viens de supprimer ton claim"
+  selection:
+    define:
+      greeting: "&6Vous rentrez dans le claim de &a%region%"
+      farewell: "&6Vous sortez du claim de &a%region%"
+    redefine:
+      greeting: "&6Vous rentrez dans le claim de &a%region%"
+      farewell: "&6Vous sortez du claim de &a%region%"
 
 pillar:
   message: "&6Acceder au pillier %northwest%&6, %northeast%&6, %southwest%&6, %southeast%&6 et à %current%"
