--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -33,51 +33,60 @@ help:
   stats-other: '%prefix% &6/claim stats <show|reset> [Joueur] [Commande]'
 
 claim:
-  notallowedinworld: "%prefix% &cTu ne peux pas faire cette commande dans ce monde"
-  worldnothandle: "%prefix% &cLe monde &8%world% &cne gère pas les régions"
-  alreadyexist: "%prefix% &cTu as déjà un claim"
-  alreadyexistother: "%prefix% &8%region% &ca déjà un claim"
-  notexist: "%prefix% &cTu n'as pas de claim"
-  notexistother: "%prefix% &8%region% &cne possède pas de claim"
-  addmember: "%prefix% &6Tu viens d'ajouter &a%target% &6à ton claim"
-  addmemberother: "%prefix% &6Tu viens d'ajouter &a%target% &6au claim de &a%region%"
-  alreadymember: "%prefix% &8%target% &cfait déjà parti de ton claim"
-  alreadymemberother: "%prefix% &8%target% &cfait déjà parti du claim de &8%region%"
-  addowner: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires de ton claim"
-  addownerother: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires du claim de &a%region%"
-  alreadyowner: "%prefix% &8%target% &cfait déjà parti des propriétaires de ton claim"
-  alreadyownerother: "%prefix% &8%target% &cfait déjà parti des propriétaires du claim de &8%region%"
-  removemember: "%prefix% &6Tu viens de retirer &a%target% &6de ton claim"
-  removememberother: "%prefix% &6Tu viens de retirer &a%target% &6du claim de &a%region%"
-  notmember: "%prefix% &8%target% &cne fait pas parti de ton claim"
-  notmemberother: "%prefix% &8%target% &cne fait pas parti du claim de &8%region%"
-  removeowner: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires de ton claim"
-  removeownerother: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires du claim de &a%region%"
-  notowner: "%prefix% &8%target% &cne fait pas parti des propriétaires de ton claim"
-  notownerother: "%prefix% &8%target% &cne fait pas parti des propriétaires du claim de &8%region%"
-  noselection: "%prefix% &cTu dois d'abord faire une séléction"
-  notcuboid: "%prefix% &cTu ne peux faire que des sélections cubiques"
-  overlap: "%prefix% &cLa séléction passe sur d'autres régions: &8%regions%"
-  redefinenotoverlap: "%prefix% &cAttention, la séléction n'intègre pas l'ancien claim"
-  define: "%prefix% &6Tu viens de créer ton claim"
-  defineother: "%prefix% &6Tu viens de créer le claim de &a%region%"
-  redefine: "%prefix% &6Tu viens de redéfinir ton claim"
-  redefineother: "%prefix% &6Tu viens de redéfinir le claim de &a%region%"
-  notp: "%prefix% &cTon claim n'a pas de point de téléportation défini"
-  notpother: "%prefix% &cLe claim de &8%region% &cn'a pas de point de téléportation défini"
-  tp: "%prefix% &6Tu as été téléporté à ton claim"
-  tpother: "%prefix% &6Tu as été téléporté au claim de &a%region%"
-  remove: "%prefix% &6Tu as supprimé ton claim"
-  removeother: "%prefix% &6Tu as supprimé le claim de &a%region%"
-  define-target: "%prefix% &a%sender% &6viens de définir ton claim"
-  redefine-target: "%prefix% &a%sender% &6viens de changer la taille de ton claim"
-  addmember-target: "%prefix% &a%sender% &6viens d'ajouter &a%target% &6à ton claim"
-  removemember-target: "%prefix% &a%sender% &6viens de retirer &a%target% &6de ton claim"
-  addowner-target: "%prefix% &a%sender% &6viens d'ajouter &a%target% &6aux propriétaires de ton claim"
-  removeowner-target: "%prefix% &a%sender% &6viens de retirer &a%target% &6des propriétaires de ton claim"
-  remove-target: "%prefix% &a%sender% &6viens de supprimer ton claim"
-  global: "%prefix% &cTu ne peux pas interagir avec la région globale"
+  world:
+    notallowed: "%prefix% &cTu ne peux pas faire cette commande dans ce monde"
+    nothandle: "%prefix% &cLe monde &8%world% &cne gère pas les régions"
+  exist:
+    already: "%prefix% &cTu as déjà un claim"
+    already-other: "%prefix% &8%region% &ca déjà un claim"
+    not: "%prefix% &cTu n'as pas de claim"
+    not-other: "%prefix% &8%region% &cne possède pas de claim"
+  command:
+    addmember: "%prefix% &6Tu viens d'ajouter &a%target% &6à ton claim"
+    addmember-other: "%prefix% &6Tu viens d'ajouter &a%target% &6au claim de &a%region%"
+    addowner: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires de ton claim"
+    addowner-other: "%prefix% &6Tu viens d'ajouter &a%target% &6aux propriétaires du claim de &a%region%"
+    removemember: "%prefix% &6Tu viens de retirer &a%target% &6de ton claim"
+    removemember-other: "%prefix% &6Tu viens de retirer &a%target% &6du claim de &a%region%"
+    removeowner: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires de ton claim"
+    removeowner-other: "%prefix% &6Tu viens de retirer &a%target% &6des propriétaires du claim de &a%region%"
+    define: "%prefix% &6Tu viens de créer ton claim"
+    define-other: "%prefix% &6Tu viens de créer le claim de &a%region%"
+    redefine: "%prefix% &6Tu viens de redéfinir ton claim"
+    redefine-other: "%prefix% &6Tu viens de redéfinir le claim de &a%region%"
+    tp: "%prefix% &6Tu as été téléporté à ton claim"
+    tp-other: "%prefix% &6Tu as été téléporté au claim de &a%region%"
+    remove: "%prefix% &6Tu as supprimé ton claim"
+    remove-other: "%prefix% &6Tu as supprimé le claim de &a%region%"
+  domain:
+    owner:
+      already: "%prefix% &8%target% &cfait déjà parti des propriétaires de ton claim"
+      already-other: "%prefix% &8%target% &cfait déjà parti des propriétaires du claim de &8%region%"
+      not: "%prefix% &8%target% &cne fait pas parti des propriétaires de ton claim"
+      not-other: "%prefix% &8%target% &cne fait pas parti des propriétaires du claim de &8%region%"
+    member:
+      already: "%prefix% &8%target% &cfait déjà parti de ton claim"
+      already-other: "%prefix% &8%target% &cfait déjà parti du claim de &8%region%"
+      not: "%prefix% &8%target% &cne fait pas parti de ton claim"
+      not-other: "%prefix% &8%target% &cne fait pas parti du claim de &8%region%"
   selection:
+    empty: "%prefix% &cTu dois d'abord faire une séléction"
+    cuboid: "%prefix% &cTu ne peux faire que des sélections cubiques"
+    overlap: "%prefix% &cLa séléction passe sur d'autres régions: &8%regions%"
+    redefinenotoverlap: "%prefix% &cAttention, la séléction n'intègre pas l'ancien claim"
+  tp:
+    notset: "%prefix% &cTon claim n'a pas de point de téléportation défini"
+    notset-other: "%prefix% &cLe claim de &8%region% &cn'a pas de point de téléportation défini"
+  target:
+    define: "%prefix% &a%sender% &6viens de définir ton claim"
+    redefine: "%prefix% &a%sender% &6viens de changer la taille de ton claim"
+    addmember: "%prefix% &a%sender% &6viens d'ajouter &a%target% &6à ton claim"
+    removemember: "%prefix% &a%sender% &6viens de retirer &a%target% &6de ton claim"
+    addowner: "%prefix% &a%sender% &6viens d'ajouter &a%target% &6aux propriétaires de ton claim"
+    removeowner: "%prefix% &a%sender% &6viens de retirer &a%target% &6des propriétaires de ton claim"
+    remove: "%prefix% &a%sender% &6viens de supprimer ton claim"
+  interactglobal: "%prefix% &cTu ne peux pas interagir avec la région globale"
+  selection-flags:
     define:
       greeting: "&6Vous rentrez dans le claim de &a%region%"
       farewell: "&6Vous sortez du claim de &a%region%"
