--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -129,6 +129,10 @@ claim:
   stats:
     commandnotexist: "%prefix% &cLa commande &7%command% &cn'existe pas"
     commandnotstat: "%prefix% &cLa commande &7%command% &cne répertorie pas de statistiques"
+    show: "%prefix% &6Tu as effectué &a%stat% &6fois la commande &6%command%"
+    show-other: "%prefix% &a%target% &6a effectué &a%stat% &6fois la commande &6%command%"
+    show-total: "%prefix% &6Le total des commandes que tu as effectué est de &a%stat%"
+    show-total-other: "%prefix% &6Le total des commandes que &a%target% &6a effectué est de &a%stat%"
 
 # 'previous' est le message pour les anciens pilliers lors d'un redefine
 # 'current' est le message pour les pilliers actuels lors d'un remove
