--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -33,6 +33,7 @@ permissions:
       stelyclaim.claim.remove-other: true
       stelyclaim.claim.info-other: true
       stelyclaim.claim.teleport-other: true
+      stelyclaim.claim.here-other: true
       stelyclaim.claim.stats.reset-other: true
       stelyclaim.claim.stats.show-other: true
   stelyclaim.claim.help:
@@ -93,6 +94,12 @@ permissions:
     children:
       stelyclaim.claim.teleport: true
   stelyclaim.claim.teleport:
+    children:
+      stelyclaim.claim: true
+  stelyclaim.claim.here-other:
+    children:
+      stelyclaim.claim.here: true
+  stelyclaim.claim.here:
     children:
       stelyclaim.claim: true
   stelyclaim.claim.stats-other:
