--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -29,6 +29,8 @@ help:
   info-other: '%prefix% &6/claim info [Claim]'
   teleport: '%prefix% &6/claim tp'
   teleport-other: '%prefix% &6/claim tp [Claim]'
+  here: '%prefix% &6/claim here'
+  here-other: '%prefix% &6/claim here'
   stats: '%prefix% &6/claim stats <sous-commande> [Commande]'
   stats-other: '%prefix% &6/claim stats <sous-commande> [Joueur] [Commande]'
   stats_reset: '%prefix% &6/claim stats reset [Commande]'
